flux/apps/downward/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: downward-example
  namespace: downward
  labels:
    app: downward-example
spec:
  ports:
    - port: 5000
      targetPort: 5000
      name: http
      protocol: TCP
  selector:
    app: downward-example
