flux/apps/downward/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: downward-example
  namespace: downward
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`downward.misery.systems`)
      kind: Rule
      services:
        - name: downward-example
          port: 5000
  tls:
    secretName: downward-example-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: downward-example
  namespace: downward
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - downward.misery.systems
      secretName: downward-example-tls
  rules:
    - host: downward.misery.systems
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: downward-example
                port:
                  number: 5000
